HelloUltraviolet/Fixtures/RejectedSource/Procedures/BehavioralSubtypingDiagnostics/Expected.uv
//! Expected diagnostic metadata for the BehavioralSubtypingDiagnostics rejected-source specimen.

expectedDiagnostic("E-SEM-2803", "diag.15.BehavioralSubtyping")
